# connect-4

./: CMakeLists.txt  README.md  board.cpp  board.h  conanfile.txt  game.cpp  game.h  main.cpp  player.cpp  player.h
include/: board.h  game.h  player.h
include/players/: humanPlayer.h  randomPlayer.h
src/: CMakeLists.txt  board.cpp  game.cpp  player.cpp
src/players/: humanPlayer.cpp  randomPlayer.cpp
